# alby-sdk-python

./: .gitignore  PROTOCOL_V1.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: smoke.py
src/alby/: __init__.py  _version.py  breadcrumbs.py  client.py  context.py  dsn.py  event.py  stack.py  transport.py
src/alby/integrations/: __init__.py  django.py  fastapi.py  flask.py
tests/: test_client.py  test_dsn.py  test_stack.py  test_transport.py
